# savant

./: .gitignore  .gitmodules  COMPONENTS  Da fare  Makefile.am  Makefile.am.common  README  acinclude.m4  configure.ac  configure.scan
doc/programmers/: Makefile.am
doc/programmers/src/: Makefile.am
doc/programmers/src/XML/: Makefile.am
example/: AndPort.vhd
example/work._savant_lib/: Makefile.work_andport  Makefile.work_andport_imp  andport_entity.vhdl  main.cc  work_andport.cc  work_andport.hh  work_andport_elab.cc  work_andport_elab.hh  work_andport_imp.cc  work_andport_imp.hh  work_andport_imp_elab.cc  work_andport_imp_elab.hh  work_andport_imp_l34.cc  work_andport_imp_l34.hh  work_andport_imp_l34_decls.cc  work_andport_imp_l34_decls.hh  work_andport_imp_l34_state.cc  work_andport_imp_l34_state.hh
example/work._savant_lib/work_andport_secondary_units._savant_lib/: andport_imp_arch.vhdl
lib/: Makefile.am  Makefile.common
lib/vhdl/: Makefile.am
lib/vhdl/ieee/: Makefile.am  Makefile4.am
m4/: check_clutils_and_antlr.m4
src/: Makefile.am  savant.hh  savant_config.hh  version.hh
src/aire/: IRBasicDataTypes.hh  IRKind.hh  Makefile.am
src/aire/iir/: Makefile.am
src/aire/iir/IIR/: IIR.cc  IIR.hh  IIR_AboveAttribute.hh  IIR_AbsoluteOperator.hh  IIR_AccessSubtypeDefinition.hh  IIR_AccessTypeDefinition.hh  IIR_AcrossAttribute.hh  IIR_ActiveAttribute.hh  IIR_AdditionOperator.hh  IIR_Aggregate.hh  IIR_AliasDeclaration.hh  IIR_Allocator.hh  IIR_AndOperator.hh  IIR_ArchitectureDeclaration.hh  IIR_ArchitectureStatement.hh  IIR_ArchitectureStatementList.hh  IIR_ArrayNatureDefinition.hh  IIR_ArraySubnatureDefinition.hh  IIR_ArraySubtypeDefinition.hh  IIR_ArrayTypeDefinition.hh  IIR_AscendingAttribute.hh  IIR_AssertionStatement.hh  IIR_AssociationElement.hh  IIR_AssociationElementByExpression.hh  IIR_AssociationElementOpen.hh  IIR_AssociationList.hh  IIR_Attribute.hh  IIR_AttributeDeclaration.hh  IIR_AttributeSpecification.hh  IIR_AttributeSpecificationList.hh  IIR_BaseAttribute.hh  IIR_BitStringLiteral.hh  IIR_BlockConfiguration.hh  IIR_BlockStatement.hh  IIR_BranchQuantityDeclaration.hh  IIR_BreakElement.hh  IIR_BreakList.hh  IIR_BreakStatement.hh  IIR_CaseStatement.hh  IIR_CaseStatementAlternative.hh  (+239 more)
src/aire/iir/IIRBase/: BaseStandardPackage.cc  BaseStandardPackage.hh  IIRBase.cc  IIRBase.hh  IIRBase_AboveAttribute.cc  IIRBase_AboveAttribute.hh  IIRBase_AbsoluteOperator.cc  IIRBase_AbsoluteOperator.hh  IIRBase_AccessSubtypeDefinition.cc  IIRBase_AccessSubtypeDefinition.hh  IIRBase_AccessTypeDefinition.cc  IIRBase_AccessTypeDefinition.hh  IIRBase_AcrossAttribute.cc  IIRBase_AcrossAttribute.hh  IIRBase_ActiveAttribute.cc  IIRBase_ActiveAttribute.hh  IIRBase_AdditionOperator.cc  IIRBase_AdditionOperator.hh  IIRBase_Aggregate.cc  IIRBase_Aggregate.hh  IIRBase_AliasDeclaration.cc  IIRBase_AliasDeclaration.hh  IIRBase_Allocator.cc  IIRBase_Allocator.hh  IIRBase_AndOperator.cc  IIRBase_AndOperator.hh  IIRBase_ArchitectureDeclaration.cc  IIRBase_ArchitectureDeclaration.hh  IIRBase_ArchitectureStatement.cc  IIRBase_ArchitectureStatement.hh  IIRBase_ArchitectureStatementList.cc  IIRBase_ArchitectureStatementList.hh  IIRBase_ArrayNatureDefinition.cc  IIRBase_ArrayNatureDefinition.hh  IIRBase_ArraySubnatureDefinition.cc  IIRBase_ArraySubnatureDefinition.hh  IIRBase_ArraySubtypeDefinition.cc  IIRBase_ArraySubtypeDefinition.hh  IIRBase_ArrayTypeDefinition.cc  IIRBase_ArrayTypeDefinition.hh  (+457 more)
src/aire/iir/IIRScram/: IIRScram.cc  IIRScram.hh  IIRScram_AboveAttribute.cc  IIRScram_AboveAttribute.hh  IIRScram_AbsoluteOperator.cc  IIRScram_AbsoluteOperator.hh  IIRScram_AccessSubtypeDefinition.cc  IIRScram_AccessSubtypeDefinition.hh  IIRScram_AccessTypeDefinition.cc  IIRScram_AccessTypeDefinition.hh  IIRScram_AcrossAttribute.cc  IIRScram_AcrossAttribute.hh  IIRScram_ActiveAttribute.cc  IIRScram_ActiveAttribute.hh  IIRScram_AdditionOperator.cc  IIRScram_AdditionOperator.hh  IIRScram_AdditionOperators.cc  IIRScram_AdditionOperators.hh  IIRScram_Aggregate.cc  IIRScram_Aggregate.hh  IIRScram_AliasDeclaration.cc  IIRScram_AliasDeclaration.hh  IIRScram_Allocator.cc  IIRScram_Allocator.hh  IIRScram_AndOperator.cc  IIRScram_AndOperator.hh  IIRScram_ArchitectureDeclaration.cc  IIRScram_ArchitectureDeclaration.hh  IIRScram_ArchitectureStatement.cc  IIRScram_ArchitectureStatement.hh  IIRScram_ArchitectureStatementList.cc  IIRScram_ArchitectureStatementList.hh  IIRScram_ArrayNatureDefinition.cc  IIRScram_ArrayNatureDefinition.hh  IIRScram_ArraySubnatureDefinition.cc  IIRScram_ArraySubnatureDefinition.hh  IIRScram_ArraySubtypeDefinition.cc  IIRScram_ArraySubtypeDefinition.hh  IIRScram_ArrayTypeDefinition.cc  (+476 more)
src/analyzer/: Makefile.am  StandardPackage.hh  VHDLLexer.flex  VHDLLexer.hh  VHDLToken.hh  antlr_error_func.cc  antlr_error_func.hh  declaration_chain.hh  library_manager.cc  library_manager.hh  scram.cc  scram.hh  scram_func.hh  symbol_lookup.cc  symbol_lookup.hh  symbol_table.cc  symbol_table.hh  vhdl.gg  vhdl.hh
src/util/: ArgumentParser.cpp  ArgumentParser.hh  ArgumentParser.hpp  ConePartitioner.cc  Makefile.am  PluginStandardPackage.cc  PluginStandardPackage.hh  ProcessCombiner.cc  ProcessCombiner.hh  break_handler.hh  consistency.cpp  consistency.hpp  container.hh  dbgPrintHelper.hpp  dl_list.hh  elaborate_info.hh  error_func.cc  error_func.hh  fake_ostringstream.hh  generic_parser.hh  hash_table.hh  include_manager.cc  include_manager.hh  language_processing_control.cc  language_processing_control.hh  plugin_class_factory.hh  plugin_interface.hh  resolution_func.cc  resolution_func.hh  savant_module_base.hh  savant_plugin_base.hh  savant_visitor_module.hh  savant_visitor_plugin.hh  set.hh  signal_set.hh  stack.hh  string_utils.hh  wrapper_container.hh
src/verianalyzer/: Makefile.am  verilogLexer.hpp  verilogLexer.lpp  verilogParser.ypp  verilogParserDriver.cpp  verilogParserDriver.hpp
src/visitors/default/: default_visitor.hh
test/: ArgumentParserTest.cpp  Makefile.am  ScopeEntryTest.cpp  StackTest.cpp  StaticFunTest.cpp  SymbolLookupTest.cpp  SymbolTableTest.cpp  set.cpp
(+9 files in other folders)
